k8s, prometheus/college-ingress-virtualhost-stickiness.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: college-ingress
  namespace: college
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: college-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: chanee.link
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:083623472726:certificate/699260d3-1a93-4b02-842d-679f4019f6f9

spec:
  defaultBackend:
    service:
      name: college-student-svc
      port:
        number: 80
#인덱스경로는 student-svc로 보내줍니다.
  rules:
  - host: www.chanee.link
    http:
      paths:
      - pathType: Prefix
        path: /student
        backend:
          service:
            name: college-student-svc
            port: 
              number: 80
#student경로는 student-svc로 보내줍니다.
  - host: www.chanee.link
    http:
      paths:
      - pathType: Prefix
        path: /admin
        backend:
          service:
            name: college-student-svc
            port: 
              number: 80
#admin경로는 student-svc로 보내줍니다.
  - host: www.chanee.link
    http:
      paths:
      - pathType: Prefix
        path: /sugang
        backend:
          service:
            name: college-subject-svc
            port: 
              number: 80
#sugang경로는 subject-svc로 보내줍니다.
  - host: prometheus.chanee.link
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-service
            port: 
              number: 80
#프로메테우스의 지표를 얻어가기 위해 프로메테우스로 접근 할 수 있도록 추가했습니다.
